# category-recognition

./: Dockerfile  dataset.xlsx  dataset_.csv  docker-compose.yaml  main.py  new_data.csv  output.csv  pyproject.toml  routes.py
